# dementia

./: LICENSE.txt  NARRATIVE.md  README.md  dementia.cabal  stack.yaml
src/: Dementia.hs
test/: DementiaSpec.hs
