name:                dementia
version:             0.1.0
synopsis:            Completely unnecessary Paranoia RPG NPC generator.
description:
    A completely unnecessary but nevertheless potentially useful
    command line utility (and supporting library) that generates
    randomized NPCs for the newest edition of the Paranoia RPG.

    Mostly, this is an excuse for the developer to try yet again
    to learn Haskell, and use the syntax enough for it to stick
    in his head for more than fifteen minutes.
homepage:            https://github.com/concilium/dementia
bug-reports:         https://github.com/concilium/dementia/issues
license:             BSD2
license-file:        LICENSE.txt
author:              Mike Simpson <stendhal9@white-knight.org>
maintainer:          stendhal9@white-knight.org
copyright:           Copyright (c) 2017 Mike Simpson
category:            CLI
stability:           doubtful
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Dementia
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite dementia-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             specs.hs
  other-modules:       DementiaSpec
  build-depends:       base
                     , dementia
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/concilium/dementia
